fix z-index "back-to-top"

--- a/src/sass/layout/_header-hero.scss
+++ b/src/sass/layout/_header-hero.scss
@@ -25,7 +25,7 @@
   transition: opacity 250ms $effect;
   bottom: 40px;
   right: 20px;
-  z-index: 9999;
+  z-index: 9;
   width: 40px;
   height: 40px;
   line-height: 30px;
